[package]
name = "lyneate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A crate for beautiful code underlining and error reporting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
widestring = "1.0.2"
