[package]
name = "lyneate"
authors = ["FlowVix <flowvix@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A crate for beautiful code underlining and error reporting"
exclude = ["images/*"]
repository = "https://github.com/FlowVix/lyneate"
readme = "README.md"
keywords = ["error", "display", "report", "pretty", "highlight"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
widestring = "1.0.2"
